# compaigns

./: .gitignore  README.md  pyproject.toml
compaigns/: db.sqlite3  manage.py
compaigns/account/: admin.py  models.py  serializers.py  urls.py  views.py
compaigns/account/migrations/: 0001_initial.py
compaigns/compaign_crud/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
compaigns/compaign_crud/migrations/: 0001_initial.py
compaigns/compaigns/: asgi.py  settings.py  urls.py  wsgi.py
